force-app/main/default/objects/vxVaccine_Schedule__c/vxVaccine_Schedule__c.object-meta.xml
<CustomObject>
    <description>Defines the number of doses and other attributes associated with administering a vaccine</description>
    <label>Vaccine Schedule</label>
    <nameField>
        <label>Vaccine Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vaccine Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>