force-app/main/default/objects/vxVaccine_Schedule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates Vaccine Protocol is Active and available for use</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>