force-app/main/default/objects/vxVaccine_Schedule__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <description>Name of authority stating the schedule</description>
    <inlineHelpText>Name of authority stating the schedule</inlineHelpText>
    <label>Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>