force-app/main/default/objects/vxVaccine_Schedule__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Code Set related to this Vaccine Schedule e.g. COVID Vaccine</description>
    <inlineHelpText>Code Set related to this Vaccine Schedule e.g. COVID Vaccine</inlineHelpText>
    <label>Code</label>
    <referenceTo>CodeSetBundle</referenceTo>
    <relationshipLabel>Vaccine Schedules</relationshipLabel>
    <relationshipName>Vaccine_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>