force-app/main/default/objects/vxVaccine_Schedule__c/fields/Code_Set__c.field-meta.xml
<CustomField>
    <fullName>Code_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associate Code Set e.g. CDC, SNOMED etc</description>
    <label>Code Set</label>
    <referenceTo>CodeSetBundle</referenceTo>
    <relationshipLabel>Vaccine Schedules (Code Set)</relationshipLabel>
    <relationshipName>Vaccine_Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>