force-app/main/default/objects/vxVaccine_Schedule__c/fields/Default_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Default_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Where the vaccine has more than one vaccine schedule, this schedule will be selected as the default</description>
    <inlineHelpText>Where the vaccine has more than one schedule, this will be selected as the default</inlineHelpText>
    <label>Default Schedule</label>
    <type>Checkbox</type>
</CustomField>