force-app/main/default/objects/vxVaccine_Schedule__c/fields/Number_of_Doses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Doses__c</fullName>
    <description>The number of dose in this schedule</description>
    <inlineHelpText>The number of dose in this schedule</inlineHelpText>
    <label>Number of Doses</label>
    <summaryForeignKey>vxVaccine_Schedule_Dose__c.Vaccine_Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>