force-app/main/default/objects/vxVaccine_Schedule__c/fields/Vaccine_Product__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vaccine Record Type on Product</description>
    <label>Vaccine Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select a Product that is Vaccine Record Type</errorMessage>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vaccine</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Vaccine Schedules</relationshipLabel>
    <relationshipName>Vaccine_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>